--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Título de mi Página</title>
 </head>
 <body>
+    <h1>Hola Mundo</h1>
     <!-- Aquí va todo el contenido visible -->
 </body>
 </html>
