--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,35 @@
     <title>Título de mi Página</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>Login</h1>
     <!-- Aquí va todo el contenido visible -->
+    <h2>Iniciar sesion</h2>
+
+    <form id="loginForm">
+        <label>Usuario:</label><br>
+        <input type="text" id="usuario" required><br><br>
+
+        <label>Contrasena:</label><br>
+        <input type="password" id="password" required><br><br>
+
+        <button type="submit">Entrar</button>
+    </form>
+<p id="error" style="color:red;"></p>
+
+<script>
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+        e.preventDefault();
+
+        const usuario = document.getElementById("usuario").value;
+        const password = document.getElementById("contrasena").value;
+
+        if (usuario === "hola" && password === "mundo") {
+            localStorage.setItem("sesion", "activa");
+            window.location.href = "crud.html";
+        } else {
+            document.getElementById("error").textContent = "Credenciales incorrectas";
+        }
+    });
+</script>
 </body>
 </html>
