--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Título de mi Página</title>
+    <title>Monolito</title>
 </head>
 <body>
     <h1>Login</h1>
@@ -12,7 +12,7 @@
         <label>Usuario:</label><br>
         <input type="text" id="usuario" required><br><br>
 
-        <label>Contrasena:</label><br>
+        <label>Contraseña:</label><br>
         <input type="password" id="password" required><br><br>
 
         <button type="submit">Entrar</button>
