--- a/templates/products.html
+++ b/templates/products.html
@@ -6,15 +6,19 @@
 </head>
 <body>
 
-<h2>CRUD de Productos</h2>
-<p>Bienvenido, sesión activa.</p>
-<ul>
-    <li>Producto 1</li>
-    <li>Producto 2</li>
-    <li>Producto 3</li>
-</ul>
+    <nav class="navbar">
+        <div class="logo">Mi Sitio</div>
+        <ul class="nav-links">
+            <li><a href="#inicio">Listado</a></li>
+            <li><a href="#servicios">Producto Nuevo</a></li>
+            <li><a href="#acerca">Editar</a></li>
+            <li><a href="#contacto">Eliminar</a></li>
+            <li><a href="/logout">Cerrar sesión</a></li>
+        </ul>
+    </nav>
 
-<a href="/logout">Cerrar sesión</a>
+
+
 
 </body>
 </html>
