--- a/templates/product_form.html
+++ b/templates/product_form.html
@@ -51,6 +51,13 @@
                         </div>
 
                         <div class="form-group">
+                            <label for="categoria">Categoria:</label>
+                            <input type="text" id="categoria" name="categoria" min="0"
+                                   value="{% if modo == 'editar' %}{{ producto[5] }}{% endif %}" 
+                                   required>
+                        </div>
+
+                        <div class="form-group">
                             <div class="checkbox-group">
                                 <input type="checkbox" id="activo" name="activo" 
                                        {% if modo == 'nuevo' or (modo == 'editar' and producto[4] == 1) %}checked{% endif %}>
