--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
             <p>Ingresa tus credenciales para continuar</p>
         </div>
 
-        <form method="POST" action="/login">
+        <form method="POST" action="{{ url_for('auth.login') }}">
             <div class="form-group">
                 <label for="usuario">Usuario:</label>
                 <input type="text" id="usuario" name="usuario" required placeholder="Ingresa tu usuario">
